--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,8 +26,9 @@
     "bootswatch": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^4.2.0",
-    "rxjs": "6.0.0",
+    "ngx-bootstrap": "3.3.0",
+    "ngx-gallery": "^5.10.0",
+    "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
