Edit Photo Component Added

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dj4f7uqti",
+    "ApiKey": "324565982631993",
+    "ApiSecret": "vtDTQEBhcSWcRtoC9Zx9xcMWEbc"
+  }
 }
